--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -228,7 +228,7 @@
                       </button>
                       
                       <button style="margin: 0 15px;" class="btn btn-warning mb-2" (click)="notaFiscal(row)"
-                      *ngIf="row.status == '04 - Consulta Finalizada'" title="Dados da Nota">
+                      *ngIf="row.status === '04 - Consulta Finalizada'" title="Dados da Nota">
                 <i class="fa fa-money-bill-alt"></i>
               </button>
               
