ajustes endereços com erro

--- a/src/app/pages/gestao-paciente/preco-especial/preco-especial.component.html
+++ b/src/app/pages/gestao-paciente/preco-especial/preco-especial.component.html
@@ -1,3 +1,5 @@
+<div class="loader" *ngIf="isLoader"></div>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-xs-12">
@@ -185,7 +187,7 @@
                     </div>
                   </div>
                   <div class="text-right">
-                    <button class="btn btn-success" (click)="salvar(formPrecoEspecial.value)">
+                    <button class="btn btn-success" (click)="aa(formPrecoEspecial.value)">
                       SALVAR
                     </button>
                   </div>
