--- a/src/app/pages/visualizar-agenda/agenda/modal-detalhe-atendimento/modal-detalhe-atendimento.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/modal-detalhe-atendimento/modal-detalhe-atendimento.component.html
@@ -42,6 +42,10 @@
                       <label>{{atendimento.nameFather}} </label>
                     </div>
                     <div class="form-row">
+                      <div class="mr-2"><label>Telefone: </label></div>
+                      <label>{{atendimento.telefone}} </label>
+                    </div>
+                    <div class="form-row">
                       <div class="mr-2"><label>Forma pagamento: </label></div>
                       <label>{{atendimento.formaPagamento}} </label>
                     </div>
