--- a/src/app/pages/gestao-paciente/preco-especial/preco-especial.component.html
+++ b/src/app/pages/gestao-paciente/preco-especial/preco-especial.component.html
@@ -187,7 +187,7 @@
                     </div>
                   </div>
                   <div class="text-right">
-                    <button class="btn btn-success" (click)="aa(formPrecoEspecial.value)">
+                    <button class="btn btn-success" (click)="salvar(formPrecoEspecial.value)">
                       SALVAR
                     </button>
                   </div>
